syntax = "proto3";

option csharp_namespace = "General.Grpc.Protos";


message GetAllTeachingAssistantsReq {
	int64 term_id = 1;
}

message AllTeachingAssistants {
	repeated TeachingAssistant teachingAssistants = 1;
}

message TeachingAssistant{
	int64 id = 1;
	string student_code = 2;
	string student_name = 3;
	string student_last_name = 4;
	string course_title = 5;
	string term_title = 6;
}

service Student {
	rpc GetAllTeachingAssistants(GetAllTeachingAssistantsReq) returns (AllTeachingAssistants) {}
}